--- a/library_project/accounts/templates/accounts/register.html
+++ b/library_project/accounts/templates/accounts/register.html
@@ -2,8 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body class="bg-light">
+    <div class="container mt-5">
+      <div class="card shadow p-4 col-md-6 mx-auto">
+        <h2 class="text-center mb-4">Create Account</h2>
+
+        <form method="POST">
+          {% csrf_token %} {% for field in form %}
+          <div class="mb-3">
+            {{ field.label_tag }} {{ field }} {% for error in field.errors %}
+            <div class="text-danger small">{{ error }}</div>
+            {% endfor %}
+          </div>
+          {% endfor %}
+          <button type="submit" class="btn btn-primary w-100">Register</button>
+        </form>
+
+        <p class="text-center mt-3">
+          Already have an account? <a href="{% url 'login' %}">Login here</a>
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
