--- a/library_project/library_app/templates/library_app/dashboard.html
+++ b/library_project/library_app/templates/library_app/dashboard.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-  </head>
-  <body>
-    Welcome message
+{% extends 'base.html' %} {% block content %}
+<body>
+  Welcome message
 
-    <button><a href="books.html">books</a></button>
+  <button><a href="{% url 'book_list' %}">books</a></button>
 
-    <p>
-      We're dedicated to providing top-notch resources for aspiring readers.
-    </p>
-  </body>
-</html>
+  <p>We're dedicated to providing top-notch resources for aspiring readers.</p>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"
+  ></script>
+</body>
+{% endblock content %}
