--- a/library_project/library_app/templates/library_app/book_create.html
+++ b/library_project/library_app/templates/library_app/book_create.html
@@ -1,30 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Library System{% endblock %}</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <h1>Add a new book</h1>
-    <div>
-      <form action="{% url 'book_create' %}" method="POST">
-        {% csrf_token %} {{ form.as_p }}
+{% extends 'base.html' %} {% block content %}
+<body>
+  <h1>Add a new book</h1>
+  <div>
+    <form action="{% url 'book_create' %}" method="POST">
+      {% csrf_token %} {{ form.as_p }}
 
-        <button type="submit">create a book</button>
-      </form>
-    </div>
+      <button type="submit" style="margin: 10px">Add book</button>
+    </form>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    <button style="margin: 10px">
+      <a
+        href="{% url  'book_list' %}"
+        style="text-decoration: none; padding: 10px"
+        >Back to list</a
+      >
+    </button>
+  </div>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"
+  ></script>
+</body>
+{% endblock content %}
