--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -1,56 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>book_detail</title>
-  </head>
-  <body>
-    <h2>{{ book.title }}</h2>
-    <p>Author: {{ book.author }}</p>
-    <p>ISBN: {{ book.isbn }}</p>
-    <p>description: <br />{{ book.description }}</p>
-    <button
-      style="
-        border-radius: 5px;
-        background-color: lightgray;
-        padding: 5px;
-        margin: 5px;
-        width: 20%;
-      "
+{% extends 'base.html' %} {% block content %}
+<body>
+  <h2>{{ book.title }}</h2>
+  <p>Author: {{ book.author }}</p>
+  <p>ISBN: {{ book.isbn }}</p>
+  <p>description: <br />{{ book.description }}</p>
+  <button
+    style="
+      border-radius: 5px;
+      background-color: lightgray;
+      padding: 5px;
+      margin: 5px;
+      width: 20%;
+    "
+  >
+    <a
+      href="{% url 'book_list' %}"
+      style="text-decoration: none; color: blue; text-align: center"
+      >Back to list
+    </a></button
+  ><br />
+  <button
+    style="
+      padding: 5px;
+      margin: 10px;
+      width: 20%;
+      border-radius: 5px;
+      color: lightgray;
+    "
+  >
+    <a href="{% url 'book_update' book.id %}" style="text-decoration: none"
+      >Update this book</a
     >
-      <a
-        href="{% url 'book_list' %}"
-        style="text-decoration: none; color: blue; text-align: center"
-        >Back to list
-      </a></button
-    ><br />
-    <button
-      style="
-        padding: 5px;
-        margin: 10px;
-        width: 20%;
-        border-radius: 5px;
-        color: lightgray;
-      "
-    >
-      <a href="{% url 'book_update' book.id %}" style="text-decoration: none"
-        >Update this book</a
-      >
-    </button>
+  </button>
 
-    <button
-      style="
-        padding: 5px;
-        margin: 10px;
-        width: 20%;
-        border-radius: 5px;
-        color: lightgray;
-      "
+  <button
+    style="
+      padding: 5px;
+      margin: 10px;
+      width: 20%;
+      border-radius: 5px;
+      color: lightgray;
+    "
+  >
+    <a href="{% url 'book_delete' book.id %}" style="text-decoration: none"
+      >Delete this book</a
     >
-      <a href="{% url 'book_delete' book.id %}" style="text-decoration: none"
-        >Delete this book</a
-      >
-    </button>
-  </body>
-</html>
+  </button>
+</body>
+{% endblock content %}
