--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %} {% load bootstrap5 %}
+{% load static %} {% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
