--- a/library_project/library_app/templates/library_app/book_create.html
+++ b/library_project/library_app/templates/library_app/book_create.html
@@ -1,26 +1,72 @@
 {% extends 'base.html' %} {% block content %}
-<body>
-  <h1>Add a new book</h1>
-  <div>
-    <form action="{% url 'book_create' %}" method="POST">
-      {% csrf_token %} {{ form.as_p }}
 
-      <button type="submit" style="margin: 10px">Add book</button>
-    </form>
+<div class="container mt-5">
+  <h1 class="mb-4">Add a new book</h1>
+  <div
+    class="mt-4 bg-light p-4 rounded shadow-sm"
+    style="background-color: grey"
+  >
+    <form action="{% url 'book_create' %}" method="POST" class="mb-3">
+      {% csrf_token %}
+      <div class="mb-3">
+        <label for="id_title" class="form-label"
+          ><strong>Book name</strong>:</label
+        >
+        {{ form.title }}
+      </div>
 
-    <button style="margin: 10px">
-      <a
-        href="{% url  'book_list' %}"
-        style="text-decoration: none; padding: 10px"
-        >Back to list</a
+      <div class="mb-3">
+        <label for="id_author" class="form-label"
+          ><strong>Author:</strong></label
+        >
+        {{ form.author }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_title" class="form-label"><strong>ISBN:</strong></label>
+        {{ form.isbn }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_author" class="form-label"
+          ><strong>Category:</strong></label
+        >
+        {{ form.category }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_title" class="form-label"
+          ><strong>Description:</strong></label
+        >
+        {{ form.description }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_author" class="form-label"
+          ><strong>Total copies:</strong></label
+        >
+        {{ form.total_copies }}
+      </div>
+
+      <div class="mb-3">
+        <label for="id_title" class="form-label"
+          ><strong>Available copies:</strong></label
+        >
+        {{ form.available_copies }}
+      </div>
+
+      <button type="submit" class="btn btn-success">Add book</button>
+      <a href="{% url 'book_list' %}" class="btn btn-secondary ms-2"
+        >Back to List</a
       >
-    </button>
+    </form>
   </div>
+</div>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"
-  ></script>
-</body>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+  crossorigin="anonymous"
+></script>
+
 {% endblock content %}
