--- a/library_project/library_app/templates/library_app/book_delete.html
+++ b/library_project/library_app/templates/library_app/book_delete.html
@@ -1,29 +1,24 @@
 {% extends 'base.html' %} {% block content %}
-<body>
-  <h1>Delete a book</h1>
-  <div>
-    <form method="POST">
-      {% csrf_token %}
-
-      <p>Are you sure you want to delete {{ book.title }} ?</p>
-
-      {{ form.as_p }}
-
-      <button type="submit">YES</button>
-      <button type="submit">
-        <a
-          href="{% url 'book_list' %}"
-          style="text-decoration: none; color: black"
-          >No</a
-        >
-      </button>
-    </form>
+<div class="container mt-5">
+  <h1>Delete Book</h1>
+  <div class="alert alert-warning">
+    Are you sure you want to delete <strong>{{ book.title }}</strong>?
   </div>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"
-  ></script>
-</body>
+  <form method="POST" class="mb-3">
+    {% csrf_token %}
+
+    <button type="submit" class="btn btn-danger">Yes, Delete</button>
+    <a href="{% url 'book_list' %}" class="btn btn-secondary ms-2"
+      >No, Cancel</a
+    >
+  </form>
+</div>
+
+<!-- Bootstrap JS -->
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+  crossorigin="anonymous"
+></script>
 {% endblock content %}
