--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -1,22 +1,59 @@
 {% extends 'base.html' %} {% block content %}
 <body>
-  <h1>Lits of books</h1>
-  <hr />
+  <div class="container mt-5">
+    <h1 class="mb-4">Lits of books</h1>
+    <hr />
 
-  <a href="{% url 'book_create' %}">Add a book</a>
-  <ol>
-    {% for book in books %}
+    <a href="{% url 'book_create' %}" class="btn btn-primary mb-3"
+      >Add a book</a
+    >
 
-    <li>
-      <h2><a href="{% url  'book_detail' book.id %}">{{ book.title }}</a></h2>
-      <p>Author: {{ book.author }}</p>
-      <p>ISBN: {{ book.isbn }}</p>
-      <p>Total copies: {{ book.total_copies }}</p>
-      <p>Available Copies: {{ book.available_copies }}</p>
-
-      <hr />
-      {% endfor %}
-    </li>
-  </ol>
+    <div class="table-responsive">
+      <table class="table table-bordered table-striped align-middle">
+        <thead class="table-light">
+          <tr>
+            <th>ISBN</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>category</th>
+            <th>Total Copies</th>
+            <th>Available Copies</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for book in books %}
+          <tr>
+            <td>{{ book.isbn }}</td>
+            <td>
+              <a
+                href="{% url 'book_detail' book.id %}"
+                class="text-decoration-none fw-semibold"
+              >
+                {{ book.title }}
+              </a>
+            </td>
+            <td>{{ book.author }}</td>
+            <td>{{ book.category }}</td>
+            <td>{{ book.total_copies }}</td>
+            <td>{{ book.available_copies }}</td>
+            <td>
+              <div class="mt-4 d-flex gap-2">
+                <a
+                  href="{% url 'book_update' book.id %}"
+                  class="btn btn-primary"
+                  >✏️ Edit</a
+                >
+                <a href="{% url 'book_delete' book.id %}" class="btn btn-danger"
+                  >🗑️ Delete</a
+                >
+              </div>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
 </body>
 {% endblock content %}
