--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -55,6 +55,8 @@
       <!-- Add more links as needed -->
     </div>
 
+    <a href="{% url 'logout' %}" class="btn btn-danger logout-btn">Logout</a>
+
     <div class="content">{% block content %} {% endblock content %}</div>
 
     <footer
