--- a/library_project/accounts/templates/base.html
+++ b/library_project/accounts/templates/base.html
@@ -14,6 +14,8 @@
   <body>
     <h2>Welcome, Please sign in</h2>
 
+    {% block content %} {% endblock content %}
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
