--- a/library_project/library_app/templates/library_app/dashboard.html
+++ b/library_project/library_app/templates/library_app/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container mt-4">
-  <h1>Welcome to your Library Management Dashboard</h1>
+<div class="container">
+  <h1>Welcome to The Library Management Dashboard</h1>
 
   <!-- Stats row -->
   <div class="row my-4">
