--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -11,6 +11,11 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <title>LMS | {{ title }}</title>
     <hr />
     <style>
@@ -36,9 +41,14 @@
         text-decoration: none;
       }
       .sidebar a:hover {
-        background-color: #495057;
+        background-color: #bac4cf;
         color: white;
       }
+
+      .logout-btn {
+        margin: 1rem;
+      }
+
       .content {
         margin-left: 220px;
         padding: 2rem;
@@ -46,16 +56,26 @@
     </style>
   </head>
   <body>
-    <div class="sidebar">
-      <h4 class="text-white px-3 mb-3">LMS Menu</h4>
-      <a href="{% url 'dashboard' %}">Dashboard</a>
-      <a href="{% url 'book_list' %}">Books</a>
-      <a href="#">Profile</a>
-      <a href="#">Categories</a>
-      <!-- Add more links as needed -->
-    </div>
+    <div class="sidebar d-flex flex-column justify-content-between">
+      <div class="nav-links">
+        <h4 class="text-white px-3 mb-3">LMS Menu</h4>
+        <a href="{% url 'dashboard' %}">Dashboard</a>
+        <a href="{% url 'book_list' %}">Books</a>
+        <a href="#">Profile</a>
+        <a href="#">Categories</a>
+      </div>
 
-    <a href="{% url 'logout' %}" class="btn btn-danger logout-btn">Logout</a>
+      <!-- Logout button at the bottom -->
+      <div class="logout-btn p-3">
+        <a href="{% url 'logout' %}" class="btn"
+          ><img
+            src="{% static 'images/logout-image.png' %}"
+            alt="Logout"
+            style="width: 25px; height: 25px; margin-right: 10px"
+          />Logout</a
+        >
+      </div>
+    </div>
 
     <div class="content">{% block content %} {% endblock content %}</div>
 
