--- a/library_project/library_app/templates/library_app/dashboard.html
+++ b/library_project/library_app/templates/library_app/dashboard.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
+  <header style="color: black; padding: 10px">
+    {% if user.is_authenticated %}
+    <h3>Bonjour, <strong style="color: blue">{{ user.username }}!</strong></h3>
+    {% else %}
+    <li><a href="{% url 'login' %}">login</a></li>
+    {% endif %}
+  </header>
   <h1>Welcome to The Library Management Dashboard</h1>
 
   <!-- Stats row -->
