--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -61,7 +61,7 @@
         <h4 class="text-white px-3 mb-3">LMS Menu</h4>
         <a href="{% url 'dashboard' %}">Dashboard</a>
         <a href="{% url 'book_list' %}">Books</a>
-        <a href="#">Profile</a>
+        <a href="{% url 'profile' %}">Profile</a>
         <a href="#">Categories</a>
       </div>
 
