--- a/library_project/library_app/templates/library_app/book_update.html
+++ b/library_project/library_app/templates/library_app/book_update.html
@@ -54,6 +54,13 @@
         {{ form.available_copies }}
       </div>
 
+      <div class="mb-3">
+        <label for="id_author" class="form-label"
+          ><strong>Publisher:</strong></label
+        >
+        {{ form.publisher }}
+      </div>
+
       <button type="submit" class="btn btn-success">Update book</button>
       <a href="{% url 'book_list' %}" class="btn btn-secondary ms-2"
         >Back to List</a
