--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container p-4 bg-light shadow rounded">
+  <!-- Success messages -->
+  {% if messages %}
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    {% for message in messages %}
+    <p>{{ message }}</p>
+    {% endfor %}
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
+  </div>
+  {% endif %}
   <h1 class="display-4 fw-bold text-center text-gradient mb-4">
     📚 Library Catalog
   </h1>
