--- a/library_project/library_app/templates/library_app/profile.html
+++ b/library_project/library_app/templates/library_app/profile.html
@@ -9,8 +9,11 @@
       <p><strong>First Name:</strong> {{ user.first_name }}</p>
       <p><strong>Last Name:</strong> {{ user.last_name }}</p>
       <p><strong>Email:</strong> {{ user.email }}</p>
-      <p><strong>Is Staff:</strong> {{ user.is_staff }}</p>
-      <p><strong>Is Superuser:</strong> {{ user.is_superuser }}</p>
+      <p><strong>profile:</strong> {{ user.profile }}</p>
+      <!--<p><strong>Is Staff:</strong> {{ user.is_staff }}</p>
+      <p><strong>Is Superuser:</strong> {{ user.is_superuser }}</p>-->
+      <p><strong>Is Active:</strong> {{ user.is_active }}</p>
+      <p><strong>Gender:</strong> {{ profile.gender }}</p>
       <p><strong>Date Joined:</strong> {{ user.date_joined }}</p>
       <p><strong>Last Login:</strong> {{ user.last_login }}</p>
     </div>
