--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -53,6 +53,17 @@
         margin-left: 220px;
         padding: 2rem;
       }
+
+      .footer {
+        margin-left: 220px; /* Adjust to sidebar width */
+        position: fixed;
+        bottom: 0;
+        width: calc(100% - 220px); /* Prevent it from going under sidebar */
+        border-top: 1px solid #dee2e6;
+        background-color: #f8f9fa;
+        font-size: 14px;
+        z-index: 1000;
+      }
     </style>
   </head>
   <body>
@@ -79,11 +90,8 @@
 
     <div class="content">{% block content %} {% endblock content %}</div>
 
-    <footer
-      class="text-center py-3 mt-auto bg-light"
-      style="position: fixed; bottom: 0; width: 100%; margin-left: 220px"
-    >
-      copyright: Lee kimari
+    <footer class="footer bg-light text-center text-muted py-3">
+      <div class="container"></div>
     </footer>
 
     <script
