--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -91,7 +91,13 @@
     <div class="content">{% block content %} {% endblock content %}</div>
 
     <footer class="footer bg-light text-center text-muted py-3">
-      <div class="container"></div>
+      <div class="container">
+        <small>
+          &copy; {{ current_year }} <strong>Lee Kimari</strong>. All rights
+          reserved. |
+          <a href="#" class="text-decoration-none text-muted">Privacy Policy</a>
+        </small>
+      </div>
     </footer>
 
     <script
