book_issue_made

--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -73,6 +73,7 @@
         <a href="{% url 'dashboard' %}">Dashboard</a>
         <a href="{% url 'book_list' %}">Books</a>
         <a href="{% url 'profile' %}">Profile</a>
+        <a href="{% url 'issued_book' %}">books issued</a>
         <a href="#">Categories</a>
       </div>
 
