--- a/library_project/library_app/templates/base.html
+++ b/library_project/library_app/templates/base.html
@@ -73,7 +73,12 @@
         <a href="{% url 'dashboard' %}">Dashboard</a>
         <a href="{% url 'book_list' %}">Books</a>
         <a href="{% url 'profile' %}">Profile</a>
-        <a href="{% url 'issued_book' %}">books issued</a>
+        <a href="{% url 'my_requests' %}">My Book Requests</a>
+
+        {% if user.is_staff %}
+        <a href="{% url 'manage_requests' %}">Manage Book Requests</a>
+        {% endif %}
+
         <a href="#">Categories</a>
       </div>
 
