--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -18,18 +18,27 @@
         <a href="{% url 'book_list' %}" class="btn btn-secondary"
           >← Back to list</a
         >
-        <a href="{% url 'book_update' book.id %}" class="btn btn-primary"
-          >✏️ Edit</a
+
+        {% if user.is_authenticated %}
+        <a href="{% url 'request_book' book.id %}" class="btn btn-primary"
+          >Request Book</a
         >
-        <a href="{% url 'issued_book' %}" class="btn btn-primary"
-          >✏️ Borrow Book</a
-        >
+        {% else %}
+        <p><a href="{% url 'login' %}">Log in</a> to request books.</p>
+        {% endif %}
+
         <a href="{% url 'return_book' book.id %}" class="btn btn-primary"
           >✏️ Return Book</a
         >
+        {% if user.is_staff %}
+        <a href="{% url 'book_update' book.id %}" class="btn btn-primary"
+          >✏️ Edit</a
+        >
+
         <a href="{% url 'book_delete' book.id %}" class="btn btn-danger"
           >🗑️ Delete</a
         >
+        {% endif %}
       </div>
     </div>
   </div>
