--- a/library_project/library_app/templates/library_app/dashboard.html
+++ b/library_project/library_app/templates/library_app/dashboard.html
@@ -63,17 +63,45 @@
   </div>
 
   <!-- Recent activity (optional) -->
-  <div class="my-4">
-    <h4>Recently Added Books</h4>
-    <ul class="list-group">
-      {% for book in recent_books %}
-      <li class="list-group-item">
-        <strong>{{ book.title }}</strong> by {{ book.author }}
-      </li>
-      {% empty %}
-      <li class="list-group-item">No recent books.</li>
-      {% endfor %}
-    </ul>
+  <div class="container my-4">
+    <div class="row">
+      <!-- Recently Added Books -->
+      <section class="col-md-6 mb-4">
+        <h4>Recently Added Books</h4>
+        <ul class="list-group">
+          {% for book in recent_books %}
+          <li class="list-group-item">
+            <strong>{{ book.title }}</strong> by {{ book.author }}
+          </li>
+          {% empty %}
+          <li class="list-group-item">No recent books.</li>
+          {% endfor %}
+        </ul>
+      </section>
+
+      <!-- Most Popular Books -->
+      <section class="col-md-6 mb-4">
+        <h3>Most Popular Books</h3>
+        <ul class="list-group">
+          {% for book in popular_books %}
+          <li
+            class="list-group-item d-flex justify-content-between align-items-center"
+          >
+            {{ book.title }}
+            <span class="badge bg-primary rounded-pill"
+              >Borrowed
+              <span>
+                {{ book.borrow_count }}
+                <span>time{% if book.borrow_count != 1 %}s{% endif %}</span>
+              </span>
+            </span>
+          </li>
+          {% empty %}
+          <li class="list-group-item">No popular books yet.</li>
+          {% endfor %}
+        </ul>
+      </section>
+    </div>
   </div>
 </div>
 {% endblock content %}
