--- a/library_project/library_app/templates/library_app/dashboard.html
+++ b/library_project/library_app/templates/library_app/dashboard.html
@@ -27,7 +27,7 @@
       <div class="card text-white bg-success h-100">
         <div class="card-body">
           <h5 class="card-title">Authors</h5>
-          <p class="card-text fs-2">{{ total_authors }}</p>
+          <p class="card-text fs-2">{{ total_books }}</p>
         </div>
       </div>
     </div>
@@ -52,13 +52,15 @@
   <!-- Quick Actions -->
   <div class="my-4">
     <h4>Quick Actions</h4>
-    <a href="{% url 'book_create' %}" class="btn btn-primary me-2 mb-2"
-      >Add New Book</a
+    <a href="{% url 'profile' %}" class="btn btn-primary me-2 mb-2"
+      >View profile</a
     >
     <a href="{% url 'book_list' %}" class="btn btn-secondary me-2 mb-2"
       >View Books</a
     >
-    <a href="#" class="btn btn-success me-2 mb-2">Manage Authors</a>
+    <a href="{% url 'my_requests' %}" class="btn btn-success me-2 mb-2"
+      >Book requests</a
+    >
     <a href="#" class="btn btn-info me-2 mb-2">Manage Categories</a>
   </div>
 
