--- a/library_project/library_app/templates/library_app/my_requests.html
+++ b/library_project/library_app/templates/library_app/my_requests.html
@@ -14,7 +14,13 @@
   <tbody>
     {% for req in requests %}
     <tr>
-      <td>{{ req.book.title }}</td>
+      <td>
+        <a
+          href="{% url 'book_detail' req.book.id %}"
+          class="text-decoration-none fw-semibold"
+          >{{ req.book.title }}</a
+        >
+      </td>
       <td>
         {% if req.status == 'pending' %}
         <span class="badge bg-warning">{{ req.status|title }}</span>
