updated all template designs

--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -19,7 +19,7 @@
       type="text"
       name="q"
       class="form-control me-2"
-      placeholder="Search books by title, author, or ISBN"
+      placeholder="Search books by title, author, category or ISBN"
       value="{{ query }}"
     />
     <button type="submit" class="btn btn-outline-primary">Search</button>
