--- a/library_project/library_app/templates/library_app/dashboard.html
+++ b/library_project/library_app/templates/library_app/dashboard.html
@@ -34,7 +34,7 @@
     <div class="col-md-3 mb-3">
       <div class="card text-white bg-warning h-100">
         <div class="card-body">
-          <h5 class="card-title">Categories</h5>
+          <h5 class="card-title">Users</h5>
           <p class="card-text fs-2">{{ total_categories }}</p>
         </div>
       </div>
