--- a/library_project/library_app/templates/library_app/manage_requests.html
+++ b/library_project/library_app/templates/library_app/manage_requests.html
@@ -4,7 +4,7 @@
       type="text"
       name="q"
       class="form-control me-2"
-      placeholder="Search books by title, author, or ISBN"
+      placeholder="Search books by user, or book"
       value="{{ query }}"
     />
     <button type="submit" class="btn btn-outline-primary">Search</button>
